tests/error/misc_errors/implicit_module_error.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo() -> int:
6:        return 1.0
                 ^^^
GuppyTypeError: Expected return value of type `int`, got `float`
